# refactored_graphical_ray_tracing

./: CMakeLists.txt  GraphicsRework  image  main.cpp  readme.md
data/: blur_2026_07_12_15_01_47.ppm  blur_2026_07_12_17_34_38.ppm  bounding_box_2026_07_12_18_57_44.ppm  bubble_2026_07_09_20_47_09.ppm  camera_look_2026_07_10_19_41_43.ppm  camera_position_2_2026_07_10_19_50_32.ppm  camera_positioning_2026_07_10_19_30_33.ppm  checker_2026_07_12_20_03_30.ppm  checkers_2026_07_12_20_15_31.ppm  checkers_2026_07_15_19_46_18.ppm  defocus_blur_2026_07_10_20_03_27.ppm  frequency_tweak_2026_07_19_17_16_59.ppm  hermitian_smoothing_2026_07_15_22_39_30.ppm  hermitian_smoothing_2026_07_15_22_42_15.ppm  hermitian_smoothing_2026_07_15_22_45_30.ppm  motion_blur_2026_07_12_18_07_38.ppm  motion_blur_2026_07_12_18_09_41.ppm  motion_blur_2026_07_12_18_15_14.ppm  optimized_bvh_2026_07_12_19_20_37.ppm  output_2026_07_05_16_14_02.ppm  output_2026_07_05_17_11_01.ppm  output_2026_07_06_00_07_16.ppm  output_2026_07_06_22_18_58.ppm  output_2026_07_07_19_55_06.ppm  output_2026_07_07_20_03_20.ppm  output_2026_07_07_20_19_20.ppm  output_2026_07_07_20_28_51.ppm  output_2026_07_07_20_32_10.ppm  output_2026_07_07_20_56_04.ppm  output_2026_07_07_21_00_50.ppm  output_2026_07_07_21_05_14.ppm  output_2026_07_07_21_07_10.ppm  output_2026_07_07_21_14_36.ppm  output_2026_07_07_21_24_52.ppm  output_2026_07_08_20_43_39.ppm  output_2026_07_09_20_12_44.ppm  perlin_noise_2026_07_15_19_49_05.ppm  perlin_with_2026_07_15_22_31_42.ppm  perlin_with_tri_interpolation_2026_07_15_22_33_37.ppm  perlin_with_triinterpolate_2026_07_15_22_36_59.ppm  (+13 more)
headers/: aabb.h  bvh.h  camera.h  coloring.h  general.h  hitter.h  interval.h  materials.h  perlin_noise.h  quadrilateral.h  ray.h  rtw_stb_image.h  sphere.h  texture.h  vec3.h
(+1 files in other folders)
